--- a/users/redirecting-with-aoba.html
+++ b/users/redirecting-with-aoba.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Getting Started - Hatsu Documentation</title>
+        <title>with Aoba (Lume &amp; Hono) - Hatsu Documentation</title>
 
 
         <!-- Custom HTML head -->
@@ -90,7 +90,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../intro.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li class="chapter-item expanded affix "><li class="part-title">for Users</li><li class="chapter-item expanded "><a href="../users/getting-started.html" class="active"><strong aria-hidden="true">2.</strong> Getting Started</a></li><li class="chapter-item expanded "><a href="../users/feed.html"><strong aria-hidden="true">3.</strong> Feed</a></li><li class="chapter-item expanded "><a href="../users/redirecting.html"><strong aria-hidden="true">4.</strong> Redirecting</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../users/redirecting-with-static-files-and-markup.html"><strong aria-hidden="true">4.1.</strong> with Static files and Markup</a></li><li class="chapter-item expanded "><a href="../users/redirecting-with-redirects-file.html"><strong aria-hidden="true">4.2.</strong> with Redirects file</a></li><li class="chapter-item expanded "><a href="../users/redirecting-with-platform-specific-config.html"><strong aria-hidden="true">4.3.</strong> with Platform-Specific Configuration</a></li><li class="chapter-item expanded "><a href="../users/redirecting-with-aoba.html"><strong aria-hidden="true">4.4.</strong> with Aoba (Lume & Hono)</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">for Admins</li><li class="chapter-item expanded "><a href="../admins/install-with-docker.html"><strong aria-hidden="true">5.</strong> Install with Docker</a></li><li class="chapter-item expanded affix "><li class="part-title">for Developers</li><li class="chapter-item expanded "><a href="../developers/prepare.html"><strong aria-hidden="true">6.</strong> Prepare</a></li><li class="chapter-item expanded "><a href="../developers/development-local.html"><strong aria-hidden="true">7.</strong> Local Development</a></li><li class="chapter-item expanded "><a href="../developers/development-docker.html"><strong aria-hidden="true">8.</strong> Docker Development</a></li><li class="chapter-item expanded affix "><li class="part-title">Others</li><li class="chapter-item expanded "><a href="../others/compatibility-chart.html"><strong aria-hidden="true">9.</strong> Compatibility Chart</a></li><li class="chapter-item expanded "><a href="../others/json-feed-extension.html"><strong aria-hidden="true">10.</strong> JSON Feed Extension</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../intro.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li class="chapter-item expanded affix "><li class="part-title">for Users</li><li class="chapter-item expanded "><a href="../users/getting-started.html"><strong aria-hidden="true">2.</strong> Getting Started</a></li><li class="chapter-item expanded "><a href="../users/feed.html"><strong aria-hidden="true">3.</strong> Feed</a></li><li class="chapter-item expanded "><a href="../users/redirecting.html"><strong aria-hidden="true">4.</strong> Redirecting</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../users/redirecting-with-static-files-and-markup.html"><strong aria-hidden="true">4.1.</strong> with Static files and Markup</a></li><li class="chapter-item expanded "><a href="../users/redirecting-with-redirects-file.html"><strong aria-hidden="true">4.2.</strong> with Redirects file</a></li><li class="chapter-item expanded "><a href="../users/redirecting-with-platform-specific-config.html"><strong aria-hidden="true">4.3.</strong> with Platform-Specific Configuration</a></li><li class="chapter-item expanded "><a href="../users/redirecting-with-aoba.html" class="active"><strong aria-hidden="true">4.4.</strong> with Aoba (Lume & Hono)</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">for Admins</li><li class="chapter-item expanded "><a href="../admins/install-with-docker.html"><strong aria-hidden="true">5.</strong> Install with Docker</a></li><li class="chapter-item expanded affix "><li class="part-title">for Developers</li><li class="chapter-item expanded "><a href="../developers/prepare.html"><strong aria-hidden="true">6.</strong> Prepare</a></li><li class="chapter-item expanded "><a href="../developers/development-local.html"><strong aria-hidden="true">7.</strong> Local Development</a></li><li class="chapter-item expanded "><a href="../developers/development-docker.html"><strong aria-hidden="true">8.</strong> Docker Development</a></li><li class="chapter-item expanded affix "><li class="part-title">Others</li><li class="chapter-item expanded "><a href="../others/compatibility-chart.html"><strong aria-hidden="true">9.</strong> Compatibility Chart</a></li><li class="chapter-item expanded "><a href="../others/json-feed-extension.html"><strong aria-hidden="true">10.</strong> JSON Feed Extension</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -149,7 +149,7 @@
                         <a href="https://github.com/importantimport/hatsu" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
-                        <a href="https://github.com/importantimport/hatsu/edit/main/docs/src/users/getting-started.md" title="Suggest an edit" aria-label="Suggest an edit">
+                        <a href="https://github.com/importantimport/hatsu/edit/main/docs/src/users/redirecting-with-aoba.md" title="Suggest an edit" aria-label="Suggest an edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
 
@@ -178,30 +178,78 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="getting-started"><a class="header" href="#getting-started">Getting Started</a></h1>
-<h2 id="setting-up-your-static-site"><a class="header" href="#setting-up-your-static-site">Setting up your static site</a></h2>
-<p>Once you register in Hatsu instance, it will be updated <strong>fully automatically</strong>.</p>
-<p>However, your site will need to make some changes accordingly to take advantage of the ActivityPub features that Hatsu brings to the table.</p>
-<ul>
-<li><a href="./feed.html">Feed</a></li>
-<li><a href="./redirecting.html">Redirecting</a></li>
-<li>Backfeed [WIP]</li>
-</ul>
-<!-- - [Webmention]
-- [Mastodon Comments] -->
-<h2 id="choose-instance"><a class="header" href="#choose-instance">Choose instance</a></h2>
-<p>After Hatsu supports public instances, there may be a list of instances here.</p>
-<p>Until then, you'll need to <a href="../admins/install-with-docker.html">self-host the instance</a> or find an person running a Hatsu instance and have them create an account.</p>
+                        <h1 id="redirecting-with-aoba-lume--hono"><a class="header" href="#redirecting-with-aoba-lume--hono">Redirecting with <a href="https://github.com/fedikit/aoba">Aoba</a> (Lume &amp; Hono)</a></h1>
+<p>SSG plugin for Lume and Server Middleware for Deno Deploy and Netlify.</p>
+<p>Aoba provides some plugins and server middleware for Lume and Hono,
+including Hatsu integration.</p>
+<h2 id="lume"><a class="header" href="#lume"><a href="https://github.com/fedikit/aoba/blob/main/lume/plugins/hatsu.ts">Lume</a></a></h2>
+<p>The Lume plugin will do what you did in <a href="./redirecting-with-static-files-and-markup.html">Redirecting with Static files and Markup</a> for you.</p>
+<blockquote>
+<p>Replace <code>hatsu.local</code> with your Hatsu instance and <code>example.com</code> with your site.</p>
+</blockquote>
+<pre><code class="language-ts">import lume from 'lume/mod.ts'
+import { hatsuPlugin } from 'aoba/lume/plugins/hatsu.ts'
+
+export default lume({ location: new URL('https://example.com') })
+    .use(hatsuPlugin({
+        // Hatsu instance
+        instance: new URL('https://hatsu.local'),
+        // match /posts/*
+        match: [/^\/posts\/(.+)$/],
+    }))
+</code></pre>
+<h3 id="lume-server"><a class="header" href="#lume-server"><a href="https://github.com/fedikit/aoba/blob/main/lume/middlewares/hatsu.ts">Lume Server</a></a></h3>
+<p>On top of that, the Lume server middleware can redirect <code>.well-known/*</code> and AS2 request.</p>
+<blockquote>
+<p>Replace <code>hatsu.local</code> with your Hatsu instance.</p>
+</blockquote>
+<pre><code class="language-ts">import Server from 'lume/core/server.ts'
+import site from './_config.ts'
+import { hatsuMiddleware } from 'aoba/lume/middlewares/hatsu.ts'
+
+const server = new Server()
+
+server.use(hatsuMiddleware({
+    // Hatsu instance
+    instance: new URL('https://hatsu.local'),
+    // site location
+    location: site.options.location,
+}))
+
+server.start()
+</code></pre>
+<h2 id="hono"><a class="header" href="#hono"><a href="https://github.com/fedikit/aoba/blob/main/hono/middlewares/hatsu.ts">Hono</a></a></h2>
+<p>It's not published to npm, so feel free to copy and paste it if you need to use it in a Node.js.</p>
+<blockquote>
+<p>Replace <code>hatsu.local</code> with your Hatsu instance.</p>
+</blockquote>
+<pre><code class="language-ts">import { Hono } from 'hono'
+import { hatsuWellKnown, hatsuObject } from 'aoba/hono/middlewares/hatsu.ts'
+
+const app = new Hono()
+const instance = new URL('https://hatsu.local')
+
+// https://example.com/.well-known/* =&gt; https://hatsu.local/.well-known/*
+app.use('/.well-known/*'， hatsuWellKnown({ instance }))
+// https://example.com/posts/foo =&gt; https://hatsu.local/o/https://example.com/posts/foo
+app.use('/posts/*', hatsuObject({ instance }))
+</code></pre>
+<!-- ### Deno Deploy
+
+### Netlify -->
+<!-- ## Well Known
+
+## AS2 -->
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../intro.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../users/redirecting-with-platform-specific-config.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../users/feed.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../admins/install-with-docker.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -211,11 +259,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../intro.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../users/redirecting-with-platform-specific-config.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../users/feed.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../admins/install-with-docker.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
