deploy: 5d846a55636459dfa62683215846c78cdf195ab7

--- a/print.html
+++ b/print.html
@@ -479,7 +479,7 @@ sudo apt install git cargo libssl-dev
 <p>First copy the variables,</p>
 <p>Set <code>HATSU_DOMAIN</code> to your prepared domain
 (e.g. <code>hatsu.example.com</code> without <code>https://</code>)</p>
-<p>and <code>HATSU_TEST_ACCOUNT</code> to your desired user domain
+<p>and <code>HATSU_PRIMARY_ACCOUNT</code> to your desired user domain
 (e.g. <code>blog.example.com</code> without <code>https://</code>)</p>
 <pre><code class="language-bash"># copy env example
 cp .env.example .env
@@ -510,7 +510,7 @@ sudo apt install docker.io docker-compose
 <p>First copy the variables,</p>
 <p>Set <code>HATSU_DOMAIN</code> to your prepared domain
 (e.g. <code>hatsu.example.com</code> without <code>https://</code>)</p>
-<p>and <code>HATSU_TEST_ACCOUNT</code> to your desired user domain
+<p>and <code>HATSU_PRIMARY_ACCOUNT</code> to your desired user domain
 (e.g. <code>blog.example.com</code> without <code>https://</code>)</p>
 <pre><code class="language-bash"># copy env example
 cp .env.example .env
